Move PhantomJS to dev dependencies

--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "lodash.pluck": "^3.1.2",
     "mkdirp": "^0.5.1",
     "mustache": "^2.3.0",
-    "phantomjs-prebuilt": "^2.1.16",
     "prettysize": "^1.1.0",
     "svgo": "^1.0.5",
     "vinyl": "^2.1.0",
@@ -57,20 +56,21 @@
     "yargs": "^11.0.0"
   },
   "devDependencies": {
-    "mocha": "",
     "coveralls": "*",
-    "mocha-lcov-reporter": "*",
-    "istanbul": "*",
-    "should": "",
-    "rimraf": "",
-    "vinyl-fs": "^3.0.2",
-    "svg2png": "jkphl/svg2png",
     "image-diff": "^2.0.0",
-    "node-sass": "^4.7.2",
-    "less": "^3.0.1",
-    "stylus": "^0.54.5",
+    "istanbul": "*",
     "jshint": "^2.9.5",
-    "pn": "^1.1.0"
+    "less": "^3.0.1",
+    "mocha": "",
+    "mocha-lcov-reporter": "*",
+    "node-sass": "^4.7.2",
+    "phantomjs-prebuilt": "^2.1.16",
+    "pn": "^1.1.0",
+    "rimraf": "",
+    "should": "",
+    "stylus": "^0.54.5",
+    "svg2png": "~3.0.1",
+    "vinyl-fs": "^3.0.2"
   },
   "keywords": [
     "icon",
